# ros2_media_manager

./: .env  .gitignore  README.md  colcon_defaults.yaml  cyclonedds.xml  docker-compose.jetson.yaml  docker-compose.yaml  env.sh  exported_profile.yaml  pytest.ini  rosdep.yaml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: path_rosdep.sh
src/bag_manager/: CMakeLists.txt  package.xml
src/bag_manager/bag_manager/: image2png.py  managed_image2png.py  my_bag.py  qos.py  rosbag2.py
src/bag_manager/config/: bag.yaml  camera.ini  profiles.yaml
src/bag_manager/launch/: bag.launch.py  gscam.launch.py
src/media_manager/: CMakeLists.txt  package.xml
src/media_manager/media_manager/: bfid.py  manager.py
src/media_manager/tests/: test_service.py
src/media_manager_interfaces/: CMakeLists.txt  package.xml
src/media_manager_interfaces/debian_scripts/: patch_compat.sh  patch_rules.sh
src/media_manager_interfaces/srv/: GetMediaFileList.srv  SetMediaFile.srv  SetStringArray.srv
src/rqt_bag_manager/: CMakeLists.txt  package.xml  plugin.xml
src/rqt_bag_manager/resource/: bag_manager.ui
src/rqt_bag_manager/rqt_bag_manager/: bag_manager_backend.py  bag_manager_plugin.py  bag_manager_ui_loader.py
src/rqt_media_manager_control/: CMakeLists.txt  package.xml  plugin.xml
src/rqt_media_manager_control/resource/: media_manager.ui
src/rqt_media_manager_control/rqt_media_manager_control/: media_manager_backend.py  media_manager_plugin.py  media_manager_ui_loader.py  profile_creator_dialog.py
xxx/: metadata.yaml
